# reactos

./: CMakeLists.txt  Info.txt  toolchain-msvc.cmake
dll/directx/: CMakeLists.txt
ntoskrnl/: CMakeLists.txt  exportlist.h  genpeheader.h  ntos.cmake  ntoskrnl.spec  ntoskrnl.zzz  peheader.c
ntoskrnl/Mm_new/: AddressSpace.cpp  AddressSpace.hpp  CommitCharge.cpp  CommitCharge.hpp  ContiguousMemory.cpp  ControlArea.cpp  ControlArea.hpp  DebugSupport.cpp  DriverSupport.cpp  ImageSection.cpp  Init.cpp  KernelStack.cpp  KernelVad.cpp  KernelVad.hpp  Mapping.cpp  Mapping.hpp  Mapping_old.cpp  Mdl.cpp  Mdl.hpp  MmData.cpp  MmData.hpp  PageFault.cpp  PageTables.cpp  Paging.cpp  PfnDatabase.cpp  PfnDatabase.hpp  PhysicalMemory.cpp  PhysicalSection.cpp  PhysicalSection.hpp  PoolSupport.cpp  ProcessSupport.cpp  RtlBitmapEx.h  Section.cpp  Section.hpp  SectionObject.cpp  SectionObject.hpp  SectionView.cpp  SectionView.hpp  Segment.cpp  Segment.hpp  (+15 more)
ntoskrnl/cache/: cachesub.c  fssup.c  mdlsup.c  newcc.h  pinsup.c
ntoskrnl/cc/: copy.c  pin.c  view.c
ntoskrnl/config/: cmapi.c  cmparse.c  cmsysini.c  ntapi.c
ntoskrnl/ex/: event.c  handle.c  hdlsterm.c  init.c  locale.c  lookas.c  resource.c  sem.c  sysinfo.c  work.c
ntoskrnl/fstub/: disksup.c  fstubex.c
ntoskrnl/include/: ntoskrnl.h
ntoskrnl/kd/: kdio.c  kdmain.c
ntoskrnl/kd64/: kdapi.c  kddata.c  kdinit.c  kdprint.c
ntoskrnl/kdbg/: kdb.c  kdb_cli.c  kdb_expr.c
ntoskrnl/ke/: bug.c  callout.c  dpc.c  eventobj.c  gate.c  ipi.c  procobj.c  queue.c  spinlock.c  thrdobj.c  thrdschd.c  wait.c
ntoskrnl/mm/: balance.c  freelist.c  marea.c  mmfault.c  mminit.c  rmap.c  section.c
ntoskrnl/ntkrnlmp/: CMakeLists.txt
ntoskrnl/ob/: obhandle.c  oblife.c  oblink.c  obname.c  obref.c  obwait.c
ntoskrnl/po/: poshtdwn.c
ntoskrnl/ps/: job.c  kill.c  process.c  query.c  security.c  thread.c
ntoskrnl/rtl/: libsupp.c
ntoskrnl/se/: audit.c  sd.c  srm.c
ntoskrnl/wmi/: wmidrv.c
ntoskrnl_new/: CMakeLists.txt  ntosifs.c  ntoskrnl-RS1-x64.txt  ntoskrnl-RS1-x86.txt  ntoskrnl-W10-RS1-x64-fre.spec  ntoskrnl-W10-RS1-x86-fre.spec  ntoskrnl.VC.db  ntoskrnl.h  ntoskrnl.rc  ntoskrnl.sln  ntoskrnl.spec  ntoskrnl.vcxproj  ntosp.c  stubs.c  sysfuncs.h  zwapi.c
ntoskrnl_new/Alpc/: Alpc.hpp  CMakeLists.txt  Stubs.c  ntos_alpc.vcxproj
ntoskrnl_new/Cc/: CMakeLists.txt  Cc.hpp  Ccp.hpp  SharedCacheMap.cpp  Stubs.c  VACBs.txt
ntoskrnl_new/Cm/: CMakeLists.txt  Cm.hpp  Stubs.c
ntoskrnl_new/Cpp/: CMakeLists.txt  CppSupport.cpp  Exception.hpp  bitcount.hpp
ntoskrnl_new/Cpu/: Cpu.hpp  Cpu_amd64.hpp
ntoskrnl_new/Dbg/: CMakeLists.txt  DbgApi.cpp  Stubs.c
ntoskrnl_new/Docs/: CodingGuidelines.md
ntoskrnl_new/Em/: CMakeLists.txt  Stubs.c
ntoskrnl_new/Etw/: CMakeLists.txt  Stubs.c
ntoskrnl_new/Ex/: Atom.cpp  Atom.hpp  BootConfig.cpp  CMakeLists.txt  Callback.cpp  Ex.hpp  Exception.cpp  Exp.hpp  FastMutex.cpp  FastMutex.hpp  Interlocked.cpp  Interlocked.hpp  KeyedEvent.cpp  KeyedEvent.hpp  License.cpp  LookasideList.cpp  MurmurHash64A.c  Pool.cpp  Processor.cpp  PushLock.cpp  PushLock.hpp  Resource.cpp  Resource.hpp  RundownCacheAware.cpp  RundownProtection.cpp  RundownProtection.hpp  Spinlock.cpp  Stubs.c  SystemTime.cpp  Timer.cpp  WnfState.cpp  Zone.cpp
ntoskrnl_new/FsRtl/: CMakeLists.txt  Name.c  Stubs.c
ntoskrnl_new/Hvl/: CMakeLists.txt
ntoskrnl_new/Inbv/: BootVid.h  CMakeLists.txt  Stubs.c
ntoskrnl_new/Io/: CMakeLists.txt  FullIo.h  Io.hpp  Stubs.cpp
ntoskrnl_new/Kd/: CMakeLists.txt  Stubs.c
ntoskrnl_new/Ke/: Affinity.cpp  Affinity.hpp  Apc.cpp  Apc.hpp  BoundCallback.cpp  BugCheck.cpp  BugCheck.hpp  CMakeLists.txt  Callback.cpp  Callout.cpp  Callout.hpp  Clock.cpp  Cpu.cpp  Cpu.hpp  CrashDump.cpp  DeviceQueue.cpp  DeviceQueue.hpp  Dpc.cpp  Dpc.hpp  Efi.cpp  Event.cpp  Event.hpp  Exception.cpp  Exception.hpp  Gate.cpp  Gate.hpp  GuardedMutex.cpp  Interrupt.cpp  Interrupt.hpp  Irql.cpp  Irql.hpp  Ke.hpp  Kep.hpp  Mutant.cpp  Mutant.hpp  PerfCounter.cpp  PerfCounter.hpp  Process.cpp  Process.hpp  Queue.cpp  (+23 more)
ntoskrnl_new/Ldr/: CMakeLists.txt  Ldr.hpp  Resource.cpp  Stubs.cpp
ntoskrnl_new/Lsa/: CMakeLists.txt  Stubs.cpp
ntoskrnl_new/Mm/: CMakeLists.txt  ContiguousMemory.cpp  CopyMemory.cpp  KernelStack.cpp  Mapping.cpp  Mdl.cpp  Mdl.hpp  Mm.hpp  Mmp.hpp  PageFault.cpp  PhysicalMemory.cpp  Prefetch.cpp  Section.cpp  Session.cpp  Stubs.c  SysLoader.cpp  Verifier.cpp  VirtualMemory.cpp  WorkingSet.cpp  mm info.txt
ntoskrnl_new/NtApi/: Alpc.cpp  Apc.cpp  Atom.cpp  Audit.cpp  BootConfig.cpp  CMakeLists.txt  Debug.cpp  Directory.cpp  Event.cpp  EventPair.cpp  File.cpp  IoCompletion.cpp  Job.cpp  KeyedEvent.cpp  Lpc.cpp  Misc.cpp  Mutant.cpp  Namespace.cpp  Nls.cpp  NtCmApi.cpp  NtPoApi.cpp  NtTmApi.cpp  PerfCounter.cpp  PhysicalPages.cpp  Process.cpp  Profile.cpp  Section.cpp  Semaphore.cpp  Session.cpp  SymLink.cpp  SystemInformation.cpp  Thread.cpp  Timer.cpp  Token.cpp  Trace.cpp  VirtualMemory.cpp  Wait.cpp  WnfState.cpp  WorkerFactory.cpp  WriteWatch.cpp  (+1 more)
ntoskrnl_new/Ob/: CMakeLists.txt  DeviceMap.cpp  Directory.cpp  Directory.hpp  FastRef.cpp  FastRef.hpp  Handle.cpp  Information.cpp  Ob.hpp  ObjMgr.cpp  Object.cpp  Object.hpp  ObjectType.cpp  ObjectType.hpp  ObjectTypes.txt  Obp.hpp  PoolObject.hpp  Process.cpp  Reference.cpp  Security.cpp  Wait.cpp
ntoskrnl_new/Pcw/: CMakeLists.txt  Pcw.cpp  Pcw.hpp
ntoskrnl_new/Po/: CMakeLists.txt  Callback.cpp  Device.cpp  Misc.cpp  Notify.cpp  Po.hpp  PoFx.cpp  PoFx.hpp  PowerRequest.cpp  Shutdown.cpp  SystemState.cpp  Wake.cpp
ntoskrnl_new/Ps/: CMakeLists.txt  Impersonation.cpp  Job.cpp  Job.hpp  Misc.cpp  Module.cpp  Process.cpp  Process.hpp  Ps.hpp  Thread.cpp  Thread.hpp
ntoskrnl_new/Rtl/: Access.cpp  Acl.cpp  Acl.hpp  AppContainer.cpp  AtomTable.cpp  AtomTable.hpp  AvlTable.cpp  AvlTable.hpp  Bitmap.cpp  Bitmap.hpp  Bitmap64.cpp  ByteSwap.cpp  CMakeLists.txt  Compression.cpp  Context.cpp  Crc.cpp  Crc.txt  ErrorMapping.cpp  GenericTable.cpp  GenericTable.hpp  Guid.cpp  HandleTable.hpp  HashString.cpp  HashTable.cpp  HashTable.hpp  Heap.cpp  Image.cpp  IntegerConvert.cpp  (+41 more)
(+2288 files in other folders)
