
set_cpp(WITH_EXCEPTIONS)

include_directories(
    ${REACTOS_SOURCE_DIR}/sdk/lib/crt/include
    ${REACTOS_SOURCE_DIR}/sdk/lib/stl/inc)

list(APPEND SOURCE
    src/atomic.cpp
    #src/cerr.cpp
    #src/cin.cpp
    #src/clog.cpp
    #src/cond.cpp
    #src/cout.cpp
    #src/cthread.cpp
    #src/dllmain.cpp
    #src/excptptr.cpp
    #src/filesys.cpp
    #src/filesystem.cpp
    #src/filesystem_space.cpp
    #src/fiopen.cpp
    #src/future.cpp
    #src/instances.cpp
    #src/iomanip.cpp
    #src/ios.cpp
    #src/iosptrs.cpp
    #src/iostream.cpp
    #src/locale.cpp
    #src/locale0.cpp
    #src/locale0_implib.cpp
    #src/locale_implib_pure.cpp
    #src/memory_resource.cpp
    #src/mexcptptr.cpp
    #src/mpiostream.cpp
    #src/multprec.cpp
    #src/mutex.cpp
    #src/nothrow.cpp
    #src/parallel_algorithms.cpp
    #src/pplerror.cpp
    #src/ppltasks.cpp
    #src/raisehan.cpp
    #src/sharedmutex.cpp
    #src/special_math.cpp
    #src/stdhndlr.cpp
    #src/stdthrow.cpp
    #src/StlCompareStringA.cpp
    #src/StlCompareStringW.cpp
    #src/StlLCMapStringA.cpp
    #src/StlLCMapStringW.cpp
    #src/syserror.cpp
    #src/syserror_import_lib.cpp
    #src/taskscheduler.cpp
    #src/thread0.cpp
    #src/ulocale.cpp
    #src/uncaught_exception.cpp
    #src/uncaught_exceptions.cpp
    #src/ushcerr.cpp
    #src/ushcin.cpp
    #src/ushclog.cpp
    #src/ushcout.cpp
    #src/ushiostr.cpp
    #src/vector_algorithms.cpp
    #src/wcerr.cpp
    #src/wcin.cpp
    #src/wclog.cpp
    #src/wcout.cpp
    #src/winapinls.cpp
    #src/winapisupp.cpp
    #src/wiostrea.cpp
    #src/wlocale.cpp
    #src/xalloc.cpp
    #src/xcosh.cpp
    #src/xdateord.cpp
    #src/xdint.cpp
    #src/xdnorm.cpp
    #src/xdscale.cpp
    #src/xdtento.cpp
    #src/xdtest.cpp
    #src/xdunscal.cpp
    #src/xexp.cpp
    #src/xfcosh.cpp
    #src/xfdint.cpp
    #src/xfdnorm.cpp
    #src/xfdscale.cpp
    #src/xfdtento.cpp
    #src/xfdtest.cpp
    #src/xfdunsca.cpp
    #src/xferaise.cpp
    #src/xfexp.cpp
    #src/xfprec.cpp
    #src/xfsinh.cpp
    #src/xfvalues.cpp
    #src/xgetwctype.cpp
    #src/xlcosh.cpp
    #src/xldint.cpp
    #src/xldscale.cpp
    #src/xldtento.cpp
    #src/xldtest.cpp
    #src/xldunsca.cpp
    #src/xlexp.cpp
    #src/xlgamma.cpp
    #src/xlocale.cpp
    #src/xlock.cpp
    #src/xlpoly.cpp
    #src/xlprec.cpp
    #src/xlsinh.cpp
    #src/xlvalues.cpp
    #src/xmbtowc.cpp
    #src/xmtx.cpp
    #src/xnotify.cpp
    #src/xonce.cpp
    #src/xpoly.cpp
    #src/xprec.cpp
    #src/xrngabort.cpp
    #src/xrngdev.cpp
    #src/xsinh.cpp
    #src/xstod.cpp
    #src/xstof.cpp
    #src/xstoflt.cpp
    #src/xstol.cpp
    #src/xstold.cpp
    #src/xstoll.cpp
    #src/xstopfx.cpp
    #src/xstoul.cpp
    #src/xstoull.cpp
    #src/xstoxflt.cpp
    #src/xstrcoll.cpp
    #src/xstrxfrm.cpp
    #src/xthrow.cpp
    #src/xtime.cpp
    #src/xtowlower.cpp
    #src/xtowupper.cpp
    #src/xvalues.cpp
    #src/xwcscoll.cpp
    #src/xwcsxfrm.cpp
    #src/xwctomb.cpp
    #src/xwstod.cpp
    #src/xwstof.cpp
    #src/xwstoflt.cpp
    #src/xwstold.cpp
    #src/xwstopfx.cpp
    #src/xwstoxfl.cpp
    #src/_tolower.cpp
    #src/_toupper.cpp
)

add_library(stl ${SOURCE})
#add_dependencies(stl xdk)
